--- a/album.html
+++ b/album.html
@@ -18,16 +18,120 @@
   </head>
   <!--  -->
   <body>
+     <nav
+        class="navbar position-fixed bottom-0 start-0 end-0 p-2 rounded m-3 z-1 d-lg-none"
+      >
+        <ul class="nav w-100 d-flex">
+          <li class="nav-item text-center flex-fill min-width-0">
+            <a href="#" class="nav-link px-0 small text-white px-0 d-block">
+              <i class="bi bi-house-door d-block fs-5"></i>
+              Home
+            </a>
+          </li>
+          <li class="nav-item text-center flex-fill px-0 min-width-0">
+            <a href="#" class="nav-link px-0 small text-white d-block">
+              <i class="bi bi-search d-block fs-5"></i>
+              Cerca
+            </a>
+          </li>
+          <li class="nav-item text-center flex-fill px-0 min-width-0">
+            <a href="#" class="nav-link px-0 small text-white d-block">
+              <i class="bi bi-collection d-block fs-5"></i>
+              Libreria
+            </a>
+          </li>
+        </ul>
+      </nav>
     <main>
       <div class="container-fluid p-0">
         <div class="row no-gutters">
-          <div class="col-lg-3 col-4 d-none d-lg-block sidebar-left bg-black">
+          <div
+            class="col-lg-2 col d-none d-lg-block sidebar-left bg-black d-flex flex-column text-white p-4"
+          >
             <!-- contenuto della colonna sinistra -->
+              <div
+            class="col col-lg-2 d-none d-lg-block bg-black d-flex flex-column text-white p-4"
+          >
+            <i class="bi bi-three-dots fs-3"></i>
+            <!-- Prima Ul con Home Cerca e Libreria -->
+            <ul class="nav w-100 d-flex flex-column mb-4">
+              <li class="nav-item text-center flex-fill min-width-0">
+                <a
+                  href="#"
+                  class="nav-link px-0 small text-white px-0 d-flex flex-row fs-4"
+                >
+                  <i class="bi bi-house-door d-block me-3"></i>
+                  Home
+                </a>
+              </li>
+              <li class="nav-item text-center flex-fill px-0 min-width-0">
+                <a
+                  href="#"
+                  class="nav-link px-0 small text-white d-flex flex-row align-items-center fs-4"
+                >
+                  <i class="bi bi-search d-block me-3"></i>
+                  Cerca
+                </a>
+              </li>
+              <li class="nav-item text-center flex-fill px-0 min-width-0">
+                <a
+                  href="#"
+                  class="nav-link px-0 small text-white d-flex flex-row fs-4"
+                >
+                  <i class="bi bi-collection d-block me-3"></i>
+                  Libreria
+                </a>
+              </li>
+            </ul>
+            <!-- Seconda Ul con Crea Playlist Brani che ti piacciono I tuoi episodi -->
+            <ul class="nav w-100 d-flex flex-column">
+              <li class="nav-item text-center flex-fill min-width-0">
+                <a
+                  href="#"
+                  class="nav-link px-0 small text-white px-0 d-flex flex-row fs-4"
+                >
+                  <i class="bi bi-plus-square-fill me-3"></i>
+                  Crea Playlist
+                </a>
+              </li>
+              <li class="nav-item text-center flex-fill px-0 min-width-0">
+                <a
+                  href="#"
+                  class="nav-link px-0 small text-white d-flex flex-row align-items-center fs-4"
+                >
+                  <i class="bi bi-heart-fill me-3 text-troncate text-start"></i>
+                  Brani che ti piacciono
+                </a>
+              </li>
+              <li class="nav-item text-center flex-fill px-0 min-width-0">
+                <a
+                  href="#"
+                  class="nav-link px-0 small text-white d-flex flex-row fs-4"
+                >
+                  <i class="bi bi-bookmark-fill me-3"></i>
+                  I tuoi episodi
+                </a>
+              </li>
+            </ul>
+            <hr class="text-secondary" />
+            <div class="elenco-playlist">
+              <p class="text-secondary">Playlist</p>
+              <p class="text-secondary">Playlist</p>
+              <p class="text-secondary">Playlist</p>
+              <p class="text-secondary">Playlist</p>
+              <p class="text-secondary">Playlist</p>
+              <p class="text-secondary">Playlist</p>
+              <p class="text-secondary">Playlist</p>
+              <p class="text-secondary">Playlist</p>
+              <p class="text-secondary">Playlist</p>
+              <p class="text-secondary">Playlist</p>
+            </div>
+          </div>
           </div>
           <!-- 
           
           -->
-          <div class="col-lg-7 col-12 main-content bg-dark">
+          <div class="col-lg-8 col-12 main-content bg-dark">
             <!-- contenuto della colonna centrale -->
             <div class="col-lg-12 col-12 main-content bg-black">
               <div class="arrows" style="position: relative; z-index: 1">
@@ -420,8 +524,25 @@
             </div>
           </div>
 
-          <div class="col-lg-2 col-2 d-none d-lg-block sidebar-right bg-black">
+          <div
+            class="col-lg-2 col d-none d-lg-block sidebar-right bg-black d-flex flex-column text-white ps-4 pt-5"
+          >
             <!-- contenuto della colonna destra -->
+             <div
+            class="col col-lg-2 d-none d-lg-block bg-black d-flex flex-column text-white ps-4 pt-5"
+          >
+            <div
+              class="amici-header d-flex flex-row justify-content-between align-items-center"
+            >
+              <h4 class="m-0">Attività Amici</h4>
+              <div class="icone-amici">
+                <i class="bi bi-person-plus fs-4 me-2"></i>
+                <i class="bi bi-x-lg fs-4"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
           </div>
         </div>
       </div>
